seasonssk.css
/* ... */
.conversion_reminder .counter {
	color: black;
	-webkit-text-stroke: 1px #fff;
	font-size: x-large;
}

.conversion_reminder .energy1,
.conversion_reminder .energy2,
.conversion_reminder .energy3,
.conversion_reminder .energy4 {
	/*width: 33px;
	height: 33px;todo big energies here*/
}

.ages {
	position: absolute;
	bottom: -45px;
	left: 5px;
	display: flex;
	column-gap: 6px;
	justify-content: center;
}
.age {
	width: 55px;
	height: 55px;
	cursor: pointer;
}

.tableau {
	position: relative;
	display: grid;
	grid-template-columns: max-content auto;
	column-gap: 18px;

	margin-bottom: 5px;
	background-color: #ccae99;
	background-clip: padding-box;
	border: solid;
	border-width: 64px 37px;
	border-image-source: url("img/parchmentFrame.png");
	border-image-slice: 150 80;
	border-image-repeat: round;
	/*padding: 0px 10px;*/
}
.stock-wrapper {
	display: grid;
}

.stock-wrapper div {
	grid-column: 1;
	grid-row: 1;
}

/* card */

.cardtitle {
	position: absolute;
	top: 5px;
	left: 23px;
	font-weight: bold;
	font-size: 50%;
	width: 80px;
	text-align: center;
}

.cardtooltip {
	text-align: center;
	max-width: 300px;
}
.dietooltip {
	max-width: 300px;
}
.possibleCard {
	border-radius: 8px;
	border: solid 2px #e9b415;
	cursor: default;
}

/* no zoom on dice because they get blury */
:not(#seasons_dices) > .stockitem:hover {
	transform: scale(1.05);
	z-index: 150 !important;
}

.all_die_faces {
}
.all_die_face {
	background-image: url("img/dices.png");
	width: 54px;
	height: 54px;
	margin: 5px;
	display: inline-block;
}

.tableau .cardactivation {
	position: absolute;
	left: 42px;
	bottom: 12px;
	background-image: url("img/icons2022.png");
	background-position: 88.4021% 7.8553%;
	background-size: 1896.3%;
	width: 40px;
	height: 40px;
}
.tableau .activated .cardactivation {
	background-image: url("img/icons.png");
	background-position: -150px 0px;
	background-size: auto;
}

.tableau .activated {
	filter: brightness(50%);
	-webkit-filter: brightness(50%); /* Chrome, Safari, Opera */
}

.show-player-tableau a,
.anchor-up a {
	color: #000;
}

.show-player-tableau {
	height: 40px;
	width: 25px;
	grid-column: 2 !important;
	z-index: 1;
	justify-self: end;
}

.anchor-up {
	height: 25px;
	width: 25px;
	position: absolute;
	right: 35px;
	margin-top: -40px;
}

.show-player-tableau svg,
.anchor-up svg {
	height: 100%;
	width: auto;
}

.cardenergies {
	position: absolute;
	left: 10px;
	top: 20px;
	width: 100px;
	height: 100px;
}
.cardartwrap {
}
.cardart {
	display: inline-block;
	background-image: url("img/bigcards.jpg");
	width: 248px;
	height: 346px;
	margin: 10px;
}

.seasonsclearblock {
	padding: 0px 10px;
}
.seasonsblock {
	text-align: center;
	margin-top: 8px;
	padding: 3px;
}

.seasonsblock > div {
	background-color: rgb(12 12 12 / 43%);
	border-radius: 10px;
	/*padding: 10px 5px 10px 5px;myhand*/
	padding: 7px 4px 2px 4px;
	justify-content: space-between;
}

.seasonsblock h3 {
	color: white;
	box-shadow: inset 1px 1px 4px -2px #303838;
	background-color: rgb(12 12 12 / 43%);
	border-radius: 8px 8px 0px 0px;
	padding: 4px 10px 0px 10px;
	margin: 0px;
	display: inline;
}
#player_hand {
	min-height: 173px;
	padding-bottom: 8px;
}

#myhand {
	text-align: center;
}

.ssn-loc-available:before {
	content: " ";
	position: absolute;
	z-index: 0;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	border: 2px solid white;
	margin: -5px;
	border-radius: 13px;
	/*background-color: rgba(38,18,9,0.15);*/
	background: url("img/slotAvailable.png") no-repeat center;
}

.ssn-loc-full:before {
	content: " ";
	position: absolute;
	z-index: 0;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	margin: -5px;
	border-radius: 13px;
	background-color: rgba(38, 18, 9, 0.15);
}

.empty-slot {
	/*,.ssn-loc-full:before */
	box-shadow: inset 1px 1px 4px 2px #5c4223;
}

/* icons */

.sicon {
	display: inline-block;
	background-image: url("img/icons.png");
}

.icon_play {
	width: 12px;
	height: 12px;
	background-position: -130px 0px;
}

.icon_permanent {
	width: 12px;
	height: 12px;
	background-position: -100px -30px;
}

.icon_black_cube {
	width: 30px;
	height: 30px;
	background-position: -0px -25px;
}

.age2,
.age3,
.icon-active,
.prestige,
.icon_cristal,
.firstplayer,
.conversionenergy1,
.conversionenergy2,
.conversionenergy3,
.conversionenergy4,
.conversion1,
.conversion2,
.conversion3,
.discardpile,
.drawpile,
.hand,
.icon_separator {
	max-width: 100%;
	background-size: 100%;
	background-image: url("img/icons2022.png");
	display: inline-block;
	overflow: hidden;
	background-repeat: no-repeat;
}

.year2 {
	background-position: 0 0%;
	background-size: 100%;
}
.year3 {
	background-position: 0 12.306438%;
	background-size: 100%;
}
.icon-active {
	width: 12px;
	height: 12px;
	background-position: 0 23.892405%;
	background-size: 138.888889%;
}
.prestige {
	width: 40px;
	height: 35px;
	background-position: 0 31.950845%;
	background-size: 172.413793%;
}
.icon_cristal {
	width: 33px;
	height: 37px;
	background-position: 0 38.347623%;
	background-size: 180.722892%;
}
#firstplayer {
	width: 40px;
	height: 40px;
	background-position: 0 44.946401%;
	background-size: 214.285714%;
}
.conversionenergy1 {
	background-position: 0 49.773414%;
	background-size: 277.777778%;
}
.conversionenergy2 {
	background-position: 0 53.892668%;
	background-size: 277.777778%;
}
.conversionenergy3 {
	background-position: 0 58.006042%;
	background-size: 277.777778%;
}
.conversionenergy4 {
	background-position: 0 62.084592%;
	background-size: 277.777778%;
}
.conversion1 {
	background-position: 0 72.335601%;
	background-size: 319.148936%;
	width: 47px;
	height: 54px;
}
.conversion2 {
	background-position: 0 76.492819%;
	background-size: 319.148936%;
	width: 47px;
	height: 54px;
}
.conversion3 {
	background-position: 0 80.650038%;
	background-size: 319.148936%;
	width: 47px;
	height: 54px;
}
.discardpile {
	background-position: 0 84.743202%;
	background-size: 375%;
}
.drawpile {
	background-position: 0 88.754717%;
	background-size: 375%;
}
/* ... */

